// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should be able to call the default onChange function when no onChange callback provided 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  background-image: url(process:code:module.exports = "";;);
  background-size: 1em;
  background-repeat: no-repeat;
  background-position: right 1em top 50%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #999;
}

<Select
  items={
    Array [
      Object {
        "id": "1",
        "value": "test",
      },
    ]
  }
  onChange={[Function]}
  selectedOption=""
>
  <styled.select
    onChange={[Function]}
    value=""
  >
    <select
      className="c0"
      onChange={[Function]}
      value=""
    >
      <option
        className="select"
        key="1"
        value="test"
      >
        test
      </option>
    </select>
  </styled.select>
</Select>
`;

exports[`Select should render 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  background-image: url(process:code:module.exports = "";;);
  background-size: 1em;
  background-repeat: no-repeat;
  background-position: right 1em top 50%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #999;
}

<select
  className="c0"
  onChange={[Function]}
  value=""
>
  <option
    className="select"
    value="test"
  >
    test
  </option>
</select>
`;

exports[`Select should render selected option 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 0 3em 0 1.25em;
  cursor: pointer;
  background-image: url(process:code:module.exports = "";;);
  background-size: 1em;
  background-repeat: no-repeat;
  background-position: right 1em top 50%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #999;
}

<select
  className="c0"
  onChange={[Function]}
  value="test"
>
  <option
    className="select"
    value="test"
  >
    test
  </option>
</select>
`;
